<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Judas</string>
    <string name="action_settings">Settings</string>
    <string name="btn_sound_on">Habilitar Som</string>
    <string name="btn_sound_off">Desabilitar Som</string>
    <string name="sound">Som</string>
    <string name="title_activity_tema">Tema</string>
    <string name="title_activity_configuracao">Configurações</string>
    <string name="title_correct_word">Palavra Correta</string>
    <string name="title_selected_theme">Tema Selecionado</string> 
    <string name="title_winner">Você Acertou!</string>
    <string name="title_loser">Você Errou!</string>
    <string name="btn_play_again">Jogar Novamente</string>
    <string name="btn_out_game">Sair do Jogo</string>
    <string name="title_themes">Temas</string>
    <string name="label_a">A</string>
    <string name="label_b">B</string>
    <string name="label_c">C</string>
    <string name="label_d">D</string>
    <string name="label_e">E</string>
    <string name="label_f">F</string>
    <string name="label_g">G</string>
    <string name="label_h">H</string>
    <string name="label_i">I</string>
    <string name="label_j">J</string>
    <string name="label_k">K</string>
    <string name="label_l">L</string>
    <string name="label_m">M</string>
    <string name="label_n">N</string>
    <string name="label_o">O</string>
    <string name="label_p">P</string>
    <string name="label_q">Q</string>
    <string name="label_r">R</string>
    <string name="label_s">S</string>
    <string name="label_t">T</string>
    <string name="label_u">U</string>
    <string name="label_v">V</string>
    <string name="label_x">X</string>
    <string name="label_y">Y</string>
     <string name="label_w">W</string>
    <string name="label_z">Z</string>
</resources>