<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgRosto"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/fundo_grid"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtPalavra_Correta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/texts_views"
            android:text="@string/title_correct_word"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtMsg_Acerto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_winner"
            android:textColor="@color/texts_views"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnJogar_Novamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginTop="5dp"
            android:onClick="onClick"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/btn_play_again"
            android:textColor="@color/texts_views"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>